--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,1 +1,13 @@
-
+<div class="grid-x grid-margin-y grid-margin-x grid-padding-x align-center text-center">
+    <div class="cell">{{> fb-post-leon-dierx-poemes-et-poesies-l-oeil}}</div>
+    <!-- <div class="cell">{{> fb-post-catulle-mendes-philomela-le-matin}}</div> -->
+    <!-- <div class="cell">{{> fb-post-theodore-de-banville-amethystes-printemps-d-avril}}</div>
+    <div class="cell">{{> fb-post-theodore-de-banville-les-cariatides-a-victor-hugo}}</div>
+    <div class="cell">{{> fb-post-alphonse-de-lamartine-harmonies-poetiques-et-religieuses-hymne-a-la-douleur}}</div>
+    <div class="cell">{{> fb-post-alphonse-de-lamartine-meditations-poetiques-la-providence-a-l-homme}}</div>
+    <div class="cell">{{> fb-post-charles-baudelaire-les-fleurs-du-mal-la-voix}}</div>
+    <div class="cell">{{> fb-post-charles-baudelaire-les-fleurs-du-mal-les-bijoux}}</div>
+    <div class="cell">{{> fb-post-edmond-haraucourt-l-ame-nue-premier-orage}}</div>
+    <div class="cell">{{> fb-post-edmond-haraucourt-la-legende-des-sexes-impuissance}}</div>
+    <div class="cell">{{> fb-post-theophile-gautier-emaux-et-camees-le-souper-des-armures}}</div> -->
+</div>
