--- a/src/pages/les-confidences-oubliees/audio/poesies.html
+++ b/src/pages/les-confidences-oubliees/audio/poesies.html
@@ -81,6 +81,8 @@ date: 15/03/2019
     <h2 class="cell text-center h3">Léon Dierx</h2>
     <h3 class="cell h4">Poèmes et poésies</h3>
     <div class="cell">{{> leon-dierx-poemes-et-poesies-l-oeil}}</div>
+    <h3 class="cell h4">Les Lèvces Closes</h3>
+    <div class="cell">{{> leon-dierx-les-levres-closes-imperia}}</div>
 
     <hr class="cell">
 </div>
