add louis menard poems, auguste de villiers, and goabl le desert des couleurs. add social links in page signature

--- a/src/pages/les-confidences-oubliees/audio/poesies.html
+++ b/src/pages/les-confidences-oubliees/audio/poesies.html
@@ -85,4 +85,12 @@ date: 15/03/2019
     <div class="cell">{{> leon-dierx-les-levres-closes-imperia}}</div>
 
     <hr class="cell">
+
+    <h2 class="cell text-center h3">Louis Ménard</h2>
+    <h3 class="cell h4">Rêveries d'un Païen mystique</h3>
+    <div class="cell">{{> louis-menard-thebaide}}</div>
+    <h3 class="cell h4">Poésies</h3>
+    <div class="cell">{{> louis-menard-empedocle}}</div>
+
+    <hr class="cell">
 </div>
